# tomodachi-service

./: main.py  pyproject.toml
.github/workflows/: deploy.yaml  migrate.yaml
alembic/versions/: 2cd951d75758_create_users_table.py  3a81b802007e_create_profiles_table.py  a34968e6fdce_create_profiles_interests_table.py  c59d57e90573_create_addresses_table.py  d7fb9e878f3f_initial_schema.py  e4a2e37f011b_create_interests_table.py  feae8b8063cf_create_addresses_table.py
app/api/v1/: api.py
app/api/v1/routes/: address_router.py  interest_router.py  profile_router.py
app/application/services/: me_service.py
app/application/services/auth/: register_service.py
app/application/services/profile/: address_service.py  interest_service.py  profile_service.py
app/core/: dependencies.py
app/core/exceptions/: __init__.py  address_exception.py  interest_exception.py  user_exception.py
app/domain/entities/: address_entity.py  interest_entity.py  profile_entity.py  user_entity.py
app/domain/repositories/: address_repository.py  interest_repository.py  profile_interest_repository.py  profile_repository.py  user_repository.py
app/infrastructure/db/models/: address_model.py  interest_model.py  profile_interest_model.py  profile_model.py  (+1 more)
app/infrastructure/repositories/: address_repository_impl.py  interest_repository_impl.py  profile_interest_repository_impl.py  profile_repository_impl.py  user_repository_impl.py
app/schemas/: auth_schema.py  interest_schema.py
app/schemas/user/: address_schema.py  profile_schema.py  user_schema.py
deployment/: start.sh
